--- a/YXK3FZ/YXK3FZ.csproj
+++ b/YXK3FZ/YXK3FZ.csproj
@@ -342,6 +342,14 @@
       <DependentUpon>frmDzpYsTJ_test.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="RYGYL\RP\from\frmJYBMX.resx">
+      <DependentUpon>frmJYBMX.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RYGYL\RP\from\frmNewJYB.resx">
+      <DependentUpon>frmNewJYB.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="RYGYL\RP\from\frmNewRSjy.resx">
       <DependentUpon>frmNewRSjy.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -811,6 +819,18 @@
     </Compile>
     <Compile Include="RYGYL\RP\from\frmDzpYsTJ_test.Designer.cs">
       <DependentUpon>frmDzpYsTJ_test.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RYGYL\RP\from\frmJYBMX.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RYGYL\RP\from\frmJYBMX.Designer.cs">
+      <DependentUpon>frmJYBMX.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RYGYL\RP\from\frmNewJYB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RYGYL\RP\from\frmNewJYB.Designer.cs">
+      <DependentUpon>frmNewJYB.cs</DependentUpon>
     </Compile>
     <Compile Include="RYGYL\RP\from\frmNewRSjy.cs">
       <SubType>Form</SubType>
