--- a/YXK3FZ/YXK3FZ.csproj
+++ b/YXK3FZ/YXK3FZ.csproj
@@ -350,6 +350,10 @@
       <DependentUpon>frmmdcb.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="RYGYL\RP\from\frmmdljxl.resx">
+      <DependentUpon>frmmdljxl.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="RYGYL\RP\from\frmmdsl.resx">
       <DependentUpon>frmmdsl.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -372,6 +376,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RYGYL\RP\from\frmRSjy.resx">
       <DependentUpon>frmRSjy.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RYGYL\RP\from\FRMRSJYB.resx">
+      <DependentUpon>FRMRSJYB.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="RYGYL\RP\from\frmRSYJBMX.resx">
@@ -848,6 +856,12 @@
     <Compile Include="RYGYL\RP\from\frmmdcb.Designer.cs">
       <DependentUpon>frmmdcb.cs</DependentUpon>
     </Compile>
+    <Compile Include="RYGYL\RP\from\frmmdljxl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RYGYL\RP\from\frmmdljxl.Designer.cs">
+      <DependentUpon>frmmdljxl.cs</DependentUpon>
+    </Compile>
     <Compile Include="RYGYL\RP\from\frmmdsl.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -883,6 +897,12 @@
     </Compile>
     <Compile Include="RYGYL\RP\from\frmRSjy.Designer.cs">
       <DependentUpon>frmRSjy.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RYGYL\RP\from\FRMRSJYB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RYGYL\RP\from\FRMRSJYB.Designer.cs">
+      <DependentUpon>FRMRSJYB.cs</DependentUpon>
     </Compile>
     <Compile Include="RYGYL\RP\from\frmRSYJBMX.cs">
       <SubType>Form</SubType>
